<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    tools:context=".Intent2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/back_show"
            android:minWidth="35dp"
            app:srcCompat="@drawable/outline_arrow_back_24"
            app:tint="@color/colorBlack" />

        <TextView
            android:id="@+id/textShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TODO 신규등록/수정"
            android:textColor="@color/colorBlack"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Save"
            android:textColor="@color/colorBlue"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_corner3"
        android:hint="메모 제목을 입력하세요."
        android:imeOptions="actionDone"
        android:inputType="textMultiLine|text"
        android:lines="5"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Date"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/testdate"
            android:textColor="@color/colorBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/dateClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="#C8C8C8"
        android:maxHeight="35dp"
        android:minHeight="35dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/ShowCalander"
        android:textColor="#4C4C4C"
        android:textSize="12sp"
        tools:ignore="TouchTargetSizeCheck" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/intent_line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:background="#9F9F9F" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="시간"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/testdate"
            android:textColor="@color/colorBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/timeClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="#C8C8C8"
        android:maxHeight="35dp"
        android:minHeight="35dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="시계로 보기"
        android:textColor="#4C4C4C"
        android:textSize="12sp"
        tools:ignore="TouchTargetSizeCheck" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:timePickerMode="spinner" />

</LinearLayout>