<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    tools:context=".Intent1_save">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageBack_g1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/back_show"
            android:minWidth="35dp"
            app:srcCompat="@drawable/outline_arrow_back_24"
            app:tint="@color/colorBlack" />

        <TextView
            android:id="@+id/textShow_g1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GoalInsertUpdate"
            android:textColor="@color/colorBlack"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSave_g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Save"
            android:textColor="@color/colorBlue"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTitle_g1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/view_corner3"
            android:ems="10"
            android:hint="목표 제목을 입력하세요."
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnIcon_g1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:backgroundTint="#9F9F9F"
            android:gravity="center"
            android:insetLeft="3dp"
            android:insetTop="3dp"
            android:insetRight="3dp"
            android:insetBottom="3dp"
            android:maxWidth="48dip"
            android:minWidth="48dip"
            android:minHeight="48dip"
            android:padding="0dp"
            app:icon="@drawable/outline_more_horiz_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="30dp"
            app:iconTint="#555555"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1_g1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="종류"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/selecttext_g1"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_corner2_thin"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/selecttext_g1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="수치"
                android:textColor="@color/colorBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/selecttext_g1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ex) 10km 달리기\n10만원 모으기"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/selecttext_g2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_corner2_thin"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/selecttext_g2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="횟수"
                android:textColor="@color/colorBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/selecttext_g2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ex) 야식 10번\n참기"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/selecttext_g3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/view_corner2_thin"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/selecttext_g3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="시간"
                android:textColor="@color/colorBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/selecttext_g3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ex)한달동안\n10시간 공부"
                android:textColor="@color/colorBlue" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/intent_line1_g1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:background="#9F9F9F" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2_g1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="세부사항"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/intent_line2_g1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:background="#9F9F9F" />

    <TextView
        android:id="@+id/textView3_g1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Color"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSpace1_g1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearColor1_g1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11_g1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Background"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/textColor1_B_g1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/view_common2"
                    android:backgroundTint="@color/colorBlue" />

                <TextView
                    android:id="@+id/textColor1_T_g1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Color_658dc6"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</LinearLayout>